--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -6,7 +6,7 @@
 <h1>Hi Home</h1>
 <ul>
     {% for data in features %}
-        <li>{{items}}</li>
+        <li>{{data}}</li>
     {% endfor %}
 </ul>
 {% endblock %}
