--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'about' %}">About</a>
+        <a href="{% url 'gallery' %}">Gallery</a>
     </nav>
     <main>
         {% block content %}
